--- a/css/style.css
+++ b/css/style.css
@@ -1345,3 +1345,15 @@ body.raindrops {
 	width: 100%;
 	height: auto;
 }
+
+#site_logo img{
+  height: 57px;
+  width: 77px;
+}
+.contact-list-words{
+    font-size: 17px;
+}
+.about-words{
+    font-size: 20px;
+    
+}
