--- a/css/style.css
+++ b/css/style.css
@@ -1347,8 +1347,8 @@ body.raindrops {
 }
 
 #site_logo img{
-  height: 35px;
-  width: 90px;
+/*  height: 35px;
+  width: 90px;*/
 }
 .contact-list-words{
     font-size: 17px;
